--- a/app/assets/stylesheets/layout/_search.scss
+++ b/app/assets/stylesheets/layout/_search.scss
@@ -57,8 +57,12 @@
   margin-right: 24px;
 }
 
+.no-suggestion {
+  padding: 8px 16px;
+}
+
 .autocomplete-title {
-  margin-left: 5vw;
+  margin-left: 28px;
   margin-top: 36px;
 }
 
