--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <header>
   <div class="first-content-header">
     <%= link_to(root_path, class: "logo-header") do %>
-      <%= image_tag "logo-beta.svg", alt: "", class: "home-index" %>
+      <%= image_tag "logo-beta.svg", alt: "", class: "home-index logo-light" %>
+      <%= image_tag "logo-beta-blanc.svg", alt: "", class: "home-index logo-dark" %>
       <p class="name-header">Omniscient <br>
         Design</p>
     <% end %>
