--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,8 @@
 
     <!-- Stylesheets -->
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
-
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script> <!-- Ajout du defer -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> <!-- Ajout du defer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" 
       integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" 
       crossorigin="anonymous" referrerpolicy="no-referrer" defer></script> <!-- Ajout du defer -->
@@ -59,7 +58,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" 
       integrity="sha384-JnbsSLBmv2/R0fUmF2XYIcAEMPHEAO51Gitn9IjL4l89uFTIgtLF1+jqIqqd9FSk" 
       crossorigin="anonymous" defer></script> <!-- Ajout du defer -->
-    
+
     <!-- JavaScript Rails -->
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag "controllers/loader", defer: true %>
@@ -67,6 +66,7 @@
 
     <!-- Cookie Consent -->
     <%= javascript_include_tag "controllers/cookies", defer: true %>
+    <% if Rails.env.production? %>
     <!-- Google Analytics (Consent-based) -->
     <script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-WVD06EPJC3"></script>
     <script type="text/plain" data-cookie-consent="tracking" defer>
@@ -75,7 +75,7 @@
       gtag('js', new Date());
       gtag('config', 'G-WVD06EPJC3');
     </script>
-
+    <% end %>
   </head>
 
 <% theme = cookies&.[](:theme).presence || 'system' %>
