--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -326,6 +326,7 @@
   text-transform: uppercase;
   font-weight: 500;
   text-align: center;
+  color: $primary-color;
 }
 
 .text-contributor {
@@ -854,5 +855,22 @@
   .title-description-reference {
     font-size: 20px;
     margin-top: 24px;
+  }
+}
+
+
+body.dark-mode {
+  .notion-container {
+    background-color: $secondary-color-dark;
+    color: $primary-color-dark;
+  }
+
+  .contributor {
+    color: $primary-color-dark;
+  }
+
+  .pagination span,
+  .pagination a {
+    color: $primary-color-dark;
   }
 }
