--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -108,7 +108,7 @@
       <div>
         <p>Nous utilisons des cookies pour améliorer votre expérience. Acceptez-vous l'utilisation des cookies ?</p>
         <button id="accept-cookies">Accepter</button>
-        <button id="decline-cookies">Refuser</button>
+        <button id="decline-cookies">Tout refuser</button>
       </div>
     </div>
 
