--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -1,5 +1,6 @@
-<% content_for :title, "Explorer le carnet de références et de designers - Omniscient Design" %>
-<% content_for :description, "Explorez Omniscient Design, le meilleur carnet de référence numérique. Un répertoire unique avec des infos sur les travaux et la vie des designers." %>
+<% content_for :title, "Découvrez des designers inspirants - Omniscient Design" %>
+<% content_for :description, "Plongez dans notre sélection de designers : biographies, projets, styles et parcours réunis dans un carnet numérique unique." %>
+
 <%# <%= javascript_include_tag "controllers/loadMore", defer: true %>
 <%# <%= javascript_include_tag "controllers/scrollCardsIndex", defer: true %>
 <style>
