--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -1,5 +1,6 @@
-<% content_for :title, "Explorer le carnet de références et de designers - Omniscient Design" %>
-<% content_for :description, "Explorez Omniscient Design, le meilleur carnet de référence numérique. Un répertoire unique avec des infos sur les travaux et la vie des designers." %>
+<% content_for :title, "Explorer le carnet de références - Omniscient Design" %>
+<% content_for :description, "Explorez notre collection de références : images, concepts, typographies. Un répertoire unique avec des infos sur les travaux ." %>
+
 <%# <%= javascript_include_tag "controllers/loadMore", defer: true %>
 <%# <%= javascript_include_tag "controllers/scrollCardsIndex", defer: true %>
 <style>
