--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "Politique d'utilisation des cookies - Omniscient Design" %>
+<% content_for :description, "Comprenez notre usage des cookies, leur rôle dans votre navigation, et comment les paramétrer selon vos préférences." %>
+
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
