--- a/app/views/pages/politiquedeconfidentialite.html.erb
+++ b/app/views/pages/politiquedeconfidentialite.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "Politique de confidentialité - Omniscient Design" %>
+<% content_for :description, "Découvrez comment nous collectons, stockons et protégeons vos données personnelles sur Omniscient Design." %>
+
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
