--- a/app/views/pages/mentionslegales.html.erb
+++ b/app/views/pages/mentionslegales.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "Mentions légales - Omniscient Design" %>
+<% content_for :description, "Informations légales sur l’éditeur du site Omniscient Design, hébergement, propriété intellectuelle et contact." %>
+
 <section class="top-default-page">
   <%= link_to root_path do %>
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
